fix for icon sizes on mobile devices

--- a/css/less/forms.less
+++ b/css/less/forms.less
@@ -23,7 +23,6 @@ span.checkbox{
     display: none;
     color: @links;
     position: absolute;
-    font-size: 14px !important;
     top: -5px;
     left: 0;
   }
