--- a/css/less/mobile.less
+++ b/css/less/mobile.less
@@ -4,6 +4,9 @@ html.responsive{
     }
     body{
         font-size: 80%;
+        i{
+            font-size: 14px;
+        }
     }
     nav a{
         display: none;
